# BD_application

./: LICENSE  README.md
Application_qt_project_files/: CMakeLists.txt  adddeal.cpp  adddeal.h  adddeal.ui  deletedeal.cpp  deletedeal.h  deletedeal.ui  login.cpp  login.h  login.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  report.cpp  report.h  report.ui  result.html  updatedata.cpp  updatedata.h  updatedata.ui
